--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: auto;
     padding: 2rem;
 
-    background-image: url("Picture/BGCard.gif");
+    background-image: url("./Picture/BGCard.gif");
     background-size: auto;      
     background-position: center;
     background-repeat: no-repeat;
